k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-db
spec:
  selector:
    matchLabels:
      app: my-db
  template:
    metadata:
      labels:
        app: my-db
    spec:
      containers:
        - name: my-db
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: bijou
              mountPath: /data/db
      volumes:
        - name: bijou
          persistentVolumeClaim:
            claimName: mongo-pvc
