k8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  strategy: 
    #type: Recreate
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
  replicas: 5
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: devopstrainingschool/knote-jenkins:9
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
