k8s/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 8080
 # type: LoadBalancer
  #type: NodePort
  type: ClusterIP
