k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-new-ingress-anael
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - appl1.anaeleboo.com
    - appl2.anaeleboo.com
    secretName: example-tls-2
  rules:
  - host: appl1.anaeleboo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-app-service
            port:
              number: 80
  - host: appl2.anaeleboo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-knote-service
            port:
              number: 80
